clean up using inspections
git-svn-id: https://svn.apache.org/repos/asf/maven/surefire/branches/surefire-testng@381892 13f79535-47bb-0310-9956-ffa450edef68